--- a/wordsearch.css
+++ b/wordsearch.css
@@ -26,14 +26,7 @@ legend {
   color: #A0F7F7;    
 }
 
-input {
-  display: block;
-  float: right;
-  clear: right;
-  text-align: right;
-  }
-
-textarea{
+input, textarea {
   display: block;
   float: right;
   clear: right;
